docs(config): align README/docs/env example with current behavior

--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,45 @@ BOT_CHAT_TEMPERATURE=0.6
 BOT_CHAT_CONTEXT_TURNS=6
 BOT_CHAT_CONTEXT_TTL_SECONDS=1800
 # Optional override for base system instruction sent to OpenRouter
+# If empty, the app loads prompt text from markdown files:
+# - local override: src/signal_bot_orx/chat_system_prompt.md (git-ignored)
+# - distribution default: src/signal_bot_orx/default_chat_system_prompt.md
 BOT_CHAT_SYSTEM_PROMPT=
 # Enforce plain-text normalization on model output (true/false)
 BOT_CHAT_FORCE_PLAIN_TEXT=true
 BOT_MENTION_ALIASES=@signalbot,@bot
 BOT_MAX_PROMPT_CHARS=700
+
+# Optional DDGS search behavior
+BOT_SEARCH_ENABLED=true
+# Search privacy mode:
+# - no_context (default): DDGS only for explicit slash commands
+#   (/search, /news, /wiki, /images, /source)
+# - context: allow normal chat messages to be eligible for DDGS routing
+BOT_SEARCH_CONTEXT_MODE=no_context
+# Per-command mode toggles:
+BOT_SEARCH_MODE_SEARCH_ENABLED=true
+BOT_SEARCH_MODE_NEWS_ENABLED=true
+BOT_SEARCH_MODE_WIKI_ENABLED=true
+BOT_SEARCH_MODE_IMAGES_ENABLED=true
+# Debug-only routing diagnostics (no raw message/result payload logging)
+BOT_SEARCH_DEBUG_LOGGING=false
+# Search response style controls:
+BOT_SEARCH_PERSONA_ENABLED=false
+BOT_SEARCH_USE_HISTORY_FOR_SUMMARY=false
+# Search settings:
+BOT_SEARCH_REGION=us-en
+BOT_SEARCH_SAFESEARCH=moderate
+BOT_SEARCH_BACKEND_SEARCH=auto
+BOT_SEARCH_BACKEND_NEWS=auto
+BOT_SEARCH_BACKEND_WIKI=wikipedia
+BOT_SEARCH_BACKEND_IMAGES=duckduckgo
+BOT_SEARCH_TEXT_MAX_RESULTS=5
+BOT_SEARCH_NEWS_MAX_RESULTS=5
+BOT_SEARCH_WIKI_MAX_RESULTS=3
+BOT_SEARCH_IMAGES_MAX_RESULTS=3
+BOT_SEARCH_TIMEOUT_SECONDS=8
+BOT_SEARCH_SOURCE_TTL_SECONDS=1800
 
 # Access control
 # Legacy single number allowlist:
@@ -43,5 +77,7 @@ SIGNAL_DISABLE_AUTH=false
 # - dm_fallback: send replies privately to sender
 BOT_GROUP_REPLY_MODE=group
 
+# Bind example for deployment/LAN access.
+# Code default remains 127.0.0.1 when this is unset.
 BOT_WEBHOOK_HOST=0.0.0.0
 BOT_WEBHOOK_PORT=8001
