feat(search): add backend fallback chains for web-first results

--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,13 @@ BOT_SEARCH_USE_HISTORY_FOR_SUMMARY=false
 # Search settings:
 BOT_SEARCH_REGION=us-en
 BOT_SEARCH_SAFESEARCH=moderate
+# Ordered fallback chains for general search/news.
+# If set, these take precedence over legacy single-backend vars below.
+# Search default keeps grokipedia last to avoid encyclopedia-first answers.
+BOT_SEARCH_BACKEND_SEARCH_ORDER=duckduckgo,bing,google,yandex,grokipedia
+# News default excludes encyclopedia backends.
+BOT_SEARCH_BACKEND_NEWS_ORDER=duckduckgo,bing,yahoo
+# Legacy single-backend compatibility vars:
 BOT_SEARCH_BACKEND_SEARCH=auto
 BOT_SEARCH_BACKEND_NEWS=auto
 BOT_SEARCH_BACKEND_WIKI=wikipedia
