feat(search): add optional aggregate backend strategy

--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,10 @@ BOT_SEARCH_USE_HISTORY_FOR_SUMMARY=false
 # Search settings:
 BOT_SEARCH_REGION=us-en
 BOT_SEARCH_SAFESEARCH=moderate
+# Backend query strategy:
+# - first_non_empty (default): stop at first backend with results
+# - aggregate: query all configured backends, merge/dedupe, then cap to MAX_RESULTS
+BOT_SEARCH_BACKEND_STRATEGY=first_non_empty
 # Ordered fallback chains for general search/news.
 # If set, these take precedence over legacy single-backend vars below.
 # Search default keeps grokipedia last to avoid encyclopedia-first answers.
