feat(search): add videos flow fixes and note active development

--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ BOT_MAX_PROMPT_CHARS=700
 BOT_SEARCH_ENABLED=true
 # Search privacy mode:
 # - no_context (default): DDGS only for explicit slash commands
-#   (/search, /news, /wiki, /images, /source)
+#   (/search, /news, /wiki, /images, /videos, /source)
 # - context: allow normal chat messages to be eligible for DDGS routing
 BOT_SEARCH_CONTEXT_MODE=no_context
 # Per-command mode toggles:
@@ -43,6 +43,7 @@ BOT_SEARCH_MODE_SEARCH_ENABLED=true
 BOT_SEARCH_MODE_NEWS_ENABLED=true
 BOT_SEARCH_MODE_WIKI_ENABLED=true
 BOT_SEARCH_MODE_IMAGES_ENABLED=true
+BOT_SEARCH_MODE_VIDEOS_ENABLED=true
 # Debug-only routing diagnostics (no raw message/result payload logging)
 BOT_SEARCH_DEBUG_LOGGING=false
 # Search response style controls:
@@ -66,10 +67,12 @@ BOT_SEARCH_BACKEND_SEARCH=auto
 BOT_SEARCH_BACKEND_NEWS=auto
 BOT_SEARCH_BACKEND_WIKI=wikipedia
 BOT_SEARCH_BACKEND_IMAGES=duckduckgo
+BOT_SEARCH_BACKEND_VIDEOS=youtube
 BOT_SEARCH_TEXT_MAX_RESULTS=5
 BOT_SEARCH_NEWS_MAX_RESULTS=5
 BOT_SEARCH_WIKI_MAX_RESULTS=3
 BOT_SEARCH_IMAGES_MAX_RESULTS=3
+BOT_SEARCH_VIDEOS_MAX_RESULTS=5
 BOT_SEARCH_TIMEOUT_SECONDS=8
 BOT_SEARCH_SOURCE_TTL_SECONDS=1800
 
