--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "ddgs>=9.10.0",
+    "ddgs @ git+ssh://git@github.com/htmlgxn/ddgs-more.git@2638d08",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "uvicorn>=0.35.0",
