feat(webhook): add multi-transport routing and complete documentation
- Refactor webhook handler for transport-aware dispatch (_send_text, _send_image)
- Add transport-specific webhook endpoints (/webhook/whatsapp, /webhook/telegram)
- Update main.py for conditional client wiring per enabled transport
- Add comprehensive transport tests
- Update .env.example with all transport configuration options
- Update README.md and docs/README.md with multi-transport setup instructions
- Bump version to 2026.2.15

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
-# Required
+# Transport toggles (enable at least one)
+SIGNAL_ENABLED=true
+WHATSAPP_ENABLED=false
+TELEGRAM_ENABLED=false
+
+# Required for Signal when SIGNAL_ENABLED=true
 SIGNAL_API_BASE_URL=http://127.0.0.1:8080
 SIGNAL_SENDER_NUMBER=+15550001111
 # Optional UUID/ACI identifier for metadata mention matching
 SIGNAL_SENDER_UUID=
+
+# Required
 OPENROUTER_CHAT_API_KEY=sk-or-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # Optional OpenRouter tuning
@@ -85,6 +92,20 @@ SIGNAL_ALLOWED_NUMBERS=
 SIGNAL_ALLOWED_GROUP_IDS=
 # Temporary testing bypass for allowlists (true/false):
 SIGNAL_DISABLE_AUTH=false
+
+# Optional WhatsApp bridge support (whatsapp-web.js bridge)
+WHATSAPP_BRIDGE_BASE_URL=http://127.0.0.1:3001
+WHATSAPP_BRIDGE_TOKEN=
+WHATSAPP_ALLOWED_NUMBERS=
+WHATSAPP_DISABLE_AUTH=false
+
+# Optional Telegram webhook support
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_WEBHOOK_SECRET=
+TELEGRAM_ALLOWED_USER_IDS=
+TELEGRAM_ALLOWED_CHAT_IDS=
+TELEGRAM_DISABLE_AUTH=false
+TELEGRAM_BOT_USERNAME=
 
 # Reply behavior for group messages:
 # - group: reply back to the group
