Update docs with weather features and fix formatting

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,14 @@ OPENROUTER_MAX_OUTPUT_TOKENS=300
 OPENROUTER_HTTP_REFERER=
 OPENROUTER_APP_TITLE=signal-bot-orx
 
+# Weather integration (OpenWeatherMap)
+# Set your OpenWeatherMap API key to enable weather commands.
+WEATHER_API_KEY=
+# Units for temperature: metric (Celsius) or imperial (Fahrenheit)
+WEATHER_UNITS=metric
+# Default location used when no location is supplied in the command
+WEATHER_DEFAULT_LOCATION=
+
 # Optional chat behavior
 BOT_CHAT_TEMPERATURE=0.6
 BOT_CHAT_CONTEXT_TURNS=6
