Migrate search backend to orx-search

--- a/.env.example
+++ b/.env.example
@@ -91,6 +91,10 @@ BOT_SEARCH_VIDEOS_MAX_RESULTS=5
 BOT_SEARCH_TIMEOUT_SECONDS=8
 BOT_SEARCH_SOURCE_TTL_SECONDS=1800
 
+# Lolcow Wikis
+BOT_SEARCH_MODE_LOLCOW_CYRAXX_ENABLED=false
+BOT_SEARCH_MODE_LOLCOW_LARSON_ENABLED=false
+
 # Access control
 # Legacy single number allowlist:
 SIGNAL_ALLOWED_NUMBER=+15550002222
